Fixed whitespace

--- a/scss/core/_utilities.scss
+++ b/scss/core/_utilities.scss
@@ -35,8 +35,8 @@
 
 .u-gridRow {
   @include row();
-  padding-top    : rem($l-whiteSpace);
-  padding-bottom : rem($l-whiteSpace);
+  padding-bottom : $l-whiteSpace;
+  padding-top    : $l-whiteSpace;
 }
 
 // -------------------------------------
